@@ -1,0 +1,7 @@
+auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
+
+pre action: MERGE %OUTDIR%/swaksrc-%TESTID% string:'data ..FROM_ADDRESS....NEWLINE..to - ..TO_ADDRESS....NEWLINE..Message-Id: <..MESSAGEID..>..NEWLINE..swaks_version - ..SWAKS_VERSION....NEWLINE..new headers - ..NEW_HEADERS....NEWLINE..Date: ..DATE....NEWLINE..body - ..BODY....NEWLINE..'
+test action: CMD_CAPTURE %SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" --config %OUTDIR%/swaksrc-%TESTID% \
+--body "custom body" \
+--add-header "Custom-Header: custom header"
+
