@@ -1,0 +1,14 @@
+DATA Info:
+  data = <<.
+from - from@host1.nodns.test.swaks.net
+to - user@host1.nodns.test.swaks.net
+Message-Id: <19991103112429.047942@localhost>
+swaks_version - DEVRELEASE
+new headers - Custom-Header: custom header
+
+Date: Wed, 03 Nov 1999 11:24:29 -0500
+body - custom body
+
+
+
+.
