@@ -487,6 +487,14 @@
     24 - multiple bodies forces msg:multipart/alternative (--attach-type text/plain --attach-body body.txt --attach-type text/html --attach-body body.html)
     25 - single body, multiple attachments = msg:mp/mixed,
     26 - mult bodies, mult attach = msg:mp/mixed, body:mp/alt, att:whatever
+05600 - data replacement tokens
+    0 - ensure the standard body is replaced
+    1 - all tokens, %TOKEN%, command line
+    2 - all tokens, %TOKEN%, environment variable
+    3 - all tokens, %TOKEN%, config file
+    4 - all tokens, ..TOKEN.., command line
+    5 - all tokens, ..TOKEN.., environment variable
+    6 - all tokens, ..TOKEN.., config file
 
 
 
